--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# Use root/example as user/password credentials
 version: '3.1'
 
 services:
@@ -8,3 +7,6 @@ services:
     restart: always
     ports:
       - 27017:27017
+    volumes:
+      - ./persistence/mongo:/data/db
+
